Fix start screen welcome alignment

--- a/src/styles/containers/_start.scss
+++ b/src/styles/containers/_start.scss
@@ -15,6 +15,7 @@
     left: 0;
     width: 100%;
     height: 100%;
+    z-index: 1;
     background-repeat: no-repeat;
     background-image: url('../images/background-wave.svg');
     background-size: 104vw;
@@ -30,6 +31,7 @@
     align-items: flex-start;
     justify-content: flex-start;
     position: relative;
+    z-index: 2;
 
     &:first-child {
       align-items: flex-start;
